--- a/YoiEmr_Api/Web.config
+++ b/YoiEmr_Api/Web.config
@@ -12,7 +12,9 @@
   </configSections>
   <unity configSource="XmlConfig\ioc.config"/>
   <connectionStrings configSource="XmlConfig\database.config"/>
-  <appSettings/>
+  <appSettings>
+    <add key="owin:AutomaticAppStartup" value="false" />
+  </appSettings>
   <!--
     有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
 
@@ -38,7 +40,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed"/>
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <publisherPolicy apply="no"/>
