--- a/Yoisoft.Util/packages.config
+++ b/Yoisoft.Util/packages.config
@@ -2,9 +2,29 @@
 <packages>
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="LumiSoft.Net.dll" version="4.5.6712.42292" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.OData" version="7.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.4.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.OData.Core" version="7.5.0" targetFramework="net45" />
+  <package id="Microsoft.OData.Edm" version="7.5.0" targetFramework="net45" />
+  <package id="Microsoft.Spatial" version="7.5.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net45" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net45" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="net45" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net45" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net45" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net45" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net45" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net45" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net45" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net45" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net45" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net45" />
 </packages>
