--- a/YoiEmr_Api/packages.config
+++ b/YoiEmr_Api/packages.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.OData" version="7.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client.zh-Hans" version="5.2.7" targetFramework="net452" />
@@ -23,13 +28,17 @@
   <package id="Microsoft.OData.Client" version="7.5.0" targetFramework="net452" />
   <package id="Microsoft.OData.Core" version="7.5.0" targetFramework="net452" />
   <package id="Microsoft.OData.Edm" version="7.5.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Spatial" version="7.5.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="MiniProfiler" version="4.0.165" targetFramework="net461" requireReinstallation="true" />
   <package id="MiniProfiler.Shared" version="4.0.165" targetFramework="net461" requireReinstallation="true" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess" version="18.6.0" targetFramework="net452" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="18.3.0" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Collections" version="4.0.11" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net452" />
@@ -45,4 +54,5 @@
   <package id="System.Spatial" version="5.6.0" targetFramework="net452" />
   <package id="System.Threading" version="4.0.11" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net452" />
+  <package id="Unity" version="5.11.1" targetFramework="net45" />
 </packages>
