--- a/Yoisoft.DataBase.Repository/packages.config
+++ b/Yoisoft.DataBase.Repository/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
-  <package id="Unity" version="4.0.1" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net45" />
 </packages>
